# abstract

./: Avm.Class.cpp  Avm.Class.hpp  AvmException.Class.cpp  AvmException.Class.hpp  CMakeLists.txt  Factory.Class.cpp  Factory.Class.hpp  IOperand.Class.hpp  Makefile  Operand.Class.hpp  a.out  main.cpp  test
